--- a/NotificationService/appsettings.json
+++ b/NotificationService/appsettings.json
@@ -6,5 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "EmailConfiguration": {
+    "From": "your@email.com",
+    "SmtpServer": "smtp.server.com",
+    "Port": 465,
+    "Username": "user@name.com",
+    "Password": "password"
+  },
   "AllowedHosts": "*"
 }
